Fixed layout to work with empty content so that the footer will be on the bottom=0 and no content issue handling overflow.

--- a/css/layout.css
+++ b/css/layout.css
@@ -23,7 +23,7 @@ html, body {
 
 .article-container {
     order: 1;
-    flex: 1 1 auto;
+    flex: 1 0 auto;
 }
 
 .footer-container {
